erDiagram

    AUTH_USER {
        bigint id PK
        varchar username
        varchar email
        varchar password
        user_status status
        timestamp last_login
        boolean account_non_expired
        boolean account_non_locked
        int failed_login_attempts
        timestamp lockout_until
        boolean credentials_non_expired
        timestamp last_password_change
        boolean enabled
        uuid refresh_token
        bigint created_by FK
        timestamp created_at
        bigint updated_by FK
        timestamp updated_at
        bigint deleted_by FK
        timestamp deleted_at
    }

    ROLE {
        bigint id PK
        varchar name
        varchar description
    }

    AUTH_USER_IN_ROLE {
        bigint id PK
        bigint auth_user_id
        bigint role_id
        bigint created_by FK
        date created_at
        bigint deleted_by FK
        timestamp deleted_at
    }

    PERMISSION {
        bigint id PK
        varchar name
        varchar description
    }

    PERMISSION_IN_ROLE {
        bigint id PK
        bigint role_id
        bigint permission_id
    }

    AUTH_USER ||--o{ AUTH_USER : "created_by (self)"
    AUTH_USER ||--o{ AUTH_USER : "updated_by (self)"
    AUTH_USER ||--o{ AUTH_USER : "deleted_by (self)"

    AUTH_USER ||--o{ AUTH_USER_IN_ROLE : "assigned roles"
    ROLE ||--o{ AUTH_USER_IN_ROLE : "assigned to users"

    ROLE ||--o{ PERMISSION_IN_ROLE : "has permissions"
    PERMISSION ||--o{ PERMISSION_IN_ROLE : "belongs to roles"
